// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<button
  className="sc-htpNat hCsYOm"
>
  Test
</button>
`;

exports[`Button renders disabled 1`] = `
<button
  className="sc-htpNat hsOzQt"
  disabled={true}
>
  Test
</button>
`;

exports[`Button renders href 1`] = `
<a
  className="sc-bwzfXH djbEWS"
  href="https://ivesvh.com"
>
  Test
</a>
`;

exports[`Button renders onClick 1`] = `
<button
  className="sc-htpNat hCsYOm"
  onClick={[Function]}
>
  Test
</button>
`;

exports[`Button renders properties 1`] = `
<button
  className="sc-htpNat cGrUyB"
>
  Test
</button>
`;

exports[`Button renders to 1`] = `
<a
  className="sc-bdVaJa dRYfIP"
  href="https://ivesvh.com"
  onClick={[Function]}
>
  Test
</a>
`;
